--- a/templates/telegraf.service.j2
+++ b/templates/telegraf.service.j2
@@ -27,7 +27,9 @@ ExecStart=/usr/bin/docker run \
 --mount=type=bind,source={{ telegraf_etc_path }},destination=/etc/telegraf,readonly=true \
 --mount=type=bind,source=/,destination=/hostfs,readonly=true \
 --network={{ telegraf_docker_network }} \
+{% if promtail_docker_network not in ['bridge', 'host', 'none'] %}
 --network-alias=telegraf \
+{% endif %}
 {% if telegraf_docker_publish_ports | length > 0 %}
 {% for port in telegraf_docker_publish_ports %}
 --publish={{ port }} \
